objects/CMPL123QMS__Regulatory_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__Assessment__c</fullName>
        <label>Assessment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Assigned_To_Me__c</fullName>
        <formula>CMPL123QMS__Assigned_To__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regulatory_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Global_Change_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Change Control</label>
        <referenceTo>CMPL123QMS__Global_Change_Control__c</referenceTo>
        <relationshipLabel>Regulatory Assessments</relationshipLabel>
        <relationshipName>Regulatory_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Impacted_Site__c</fullName>
        <label>Impacted Site</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Site 1</fullName>
                </value>
                <value>
                    <fullName>Site 2</fullName>
                </value>
                <value>
                    <fullName>Site 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Implement_Change_Control__c</fullName>
        <label>Implement Change Control?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Reason_for_No_Change_Control__c</fullName>
        <label>Reason for No Change Control</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Regulatory_Impacts__c</fullName>
        <label>Regulatory Impacts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Regulatory Assessment</label>
    <listViews>
        <fullName>CMPL123QMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Regulatory Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regulatory Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CMPL123QMS__Due_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CMPL123QMS__Due_Date__c &lt; TODAY(), OR( ISNEW(), ISCHANGED(CMPL123QMS__Due_Date__c)))</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__Due_Date__c</errorDisplayField>
        <errorMessage>Due Dates cannot be populated with a data in the past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123QMS__Reason_for_No_Change_Control</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( CMPL123QMS__Implement_Change_Control__c, "No"), ISBLANK( CMPL123QMS__Reason_for_No_Change_Control__c),False )</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__Reason_for_No_Change_Control__c</errorDisplayField>
        <errorMessage>Reason for No Change Control is required when Implement Change Control? is populated with a value of No.</errorMessage>
    </validationRules>
</CustomObject>